--- a/HospitalSystem/wwwroot/index.html
+++ b/HospitalSystem/wwwroot/index.html
@@ -719,24 +719,27 @@
                                     <li class="nav-item active">
                                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                                     </li>
+                                    <!--   <li class="nav-item">
+         <a class="nav-link" href="about.html"> About</a>
+     </li>
+    <li class="nav-item">
+         <a class="nav-link" href="treatment.html">Treatment</a>
+     </li>
+     <li class="nav-item">
+         <a class="nav-link" href="doctor.html">Doctors</a>
+     </li>-->
+
                                     <li class="nav-item">
-                                        <a class="nav-link" href="about.html"> About</a>
+                                        <a class="nav-link" href="PatientIndex.html">Continue As Patient</a>
                                     </li>
+
                                     <li class="nav-item">
-                                        <a class="nav-link" href="treatment.html">Treatment</a>
+                                        <a class="nav-link" href="DrIndex.html">Continue As Doctor</a>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="doctor.html">Doctors</a>
-                                    </li>
-                                    <!--<li class="nav-item">
-                                      <a class="nav-link" href="testimonial.html">Testimonial</a>
-                                    </li>-->
-                                    <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact Us</a>
-                                    </li>
+
                                 </ul>
                             </div>
-                            <div class="quote_btn-container">
+                            <!--<div class="quote_btn-container">
                                 <a href="login.html">
                                     <i class="fa fa-user" aria-hidden="true"></i>
                                     <span>
@@ -754,7 +757,7 @@
                                         <i class="fa fa-search" aria-hidden="true"></i>
                                     </button>
                                 </form>
-                            </div>
+                            </div>-->
                         </div>
                     </nav>
                 </div>
@@ -885,7 +888,7 @@
 
     <!-- about section -->
 
-    <section class="about_section">
+    <<section class="about_section">
         <div class="container  ">
             <div class="row">
                 <div class="col-md-6 ">
@@ -915,7 +918,7 @@
     <!-- end about section -->
     <!-- treatment section -->
 
-    <section class="treatment_section layout_padding">
+    <!--<section class="treatment_section layout_padding">
         <div class="side_img">
             <img src="images/treatment-side-img.jpg" alt="">
         </div>
@@ -1000,12 +1003,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- end treatment section -->
     <!-- team section -->
 
-    <section class="team_section layout_padding">
+    <!--<section class="team_section layout_padding">
         <div class="container">
             <div class="heading_container heading_center">
                 <h2>
@@ -1100,22 +1103,22 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!--test-->
-                    <div>
+                    <!--<div>
                         <a href="newDr.html">Add New Doctor</a>
-                    </div>
+                    </div>-->
 
 
                     <!--end test-->
-                </div>
+                <!--</div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- end team section -->
 
-    <section class="book_section layout_padding">
+    <!--<section class="book_section layout_padding">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -1194,10 +1197,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- info section -->
-    <section class="info_section ">
+    <!--<section class="info_section ">
         <div class="container">
             <div class="info_top">
                 <div class="info_logo">
@@ -1335,7 +1338,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- end info_section -->
     <!-- footer section -->
     <footer class="footer_section">
