--- a/HospitalSystem/wwwroot/about.html
+++ b/HospitalSystem/wwwroot/about.html
@@ -82,7 +82,7 @@
               <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav  ">
                   <li class="nav-item ">
-                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="PatientIndex.html">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item active">
                     <a class="nav-link" href="about.html"> About</a>
@@ -94,21 +94,19 @@
                     <a class="nav-link" href="doctor.html">Doctors</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="testimonial.html">Testimonial</a>
+                    <a class="nav-link" href="book.html">Appoitment</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact Us</a>
-                  </li>
+                  
                 </ul>
               </div>
               <div class="quote_btn-container">
-                <a href="">
+                <a href="login.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
                   <span>
                     Login
                   </span>
                 </a>
-                <a href="">
+                <a href="signup.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
                   <span>
                     Sign Up
