--- a/HospitalSystem/wwwroot/home.html
+++ b/HospitalSystem/wwwroot/home.html
@@ -716,50 +716,50 @@
 
 
 
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 
-<head>
+<head>-->
     <!-- Basic -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--<meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />-->
     <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />-->
     <!-- Site Metas -->
-    <meta name="keywords" content="" />
+    <!--<meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
 
-    <title>Mico</title>
+    <title>Mico</title>-->
 
 
     <!-- bootstrap core css -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+    <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />-->
 
     <!-- fonts style -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">-->
 
     <!--owl slider stylesheet -->
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />-->
 
     <!-- font awesome style -->
-    <link href="css/font-awesome.min.css" rel="stylesheet" />
+    <!--<link href="css/font-awesome.min.css" rel="stylesheet" />-->
     <!-- nice select -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/css/nice-select.min.css" integrity="sha256-mLBIhmBvigTFWPSCtvdu6a76T+3Xyt+K571hupeFLg4=" crossorigin="anonymous" />-->
     <!-- datepicker -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.css">-->
     <!-- Custom styles for this template -->
-    <link href="css/style.css" rel="stylesheet" />
+    <!--<link href="css/style.css" rel="stylesheet" />-->
     <!-- responsive style -->
-    <link href="css/responsive.css" rel="stylesheet" />
+    <!--<link href="css/responsive.css" rel="stylesheet" />
 
 </head>
 
 <body>
 
-    <div class="hero_area">
+    <div class="hero_area">-->
         <!-- header section strats -->
-        <header class="header_section">
+        <!--<header class="header_section">
             <div class="header_top">
                 <div class="container">
                     <div class="contact_nav">
@@ -810,11 +810,11 @@
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="doctor.html">Doctors</a>
-                                    </li>
+                                    </li>-->
                                     <!--<li class="nav-item">
                                       <a class="nav-link" href="testimonial.html">Testimonial</a>
                                     </li>-->
-                                    <li class="nav-item">
+                                    <!--<li class="nav-item">
                                         <a class="nav-link" href="contact.html">Contact Us</a>
                                     </li>
                                 </ul>
@@ -842,10 +842,10 @@
                     </nav>
                 </div>
             </div>
-        </header>
+        </header>-->
         <!-- end header section -->
         <!-- slider section -->
-        <section class="slider_section ">
+        <!--<section class="slider_section ">
             <div class="dot_design">
                 <img src="images/dots.png" alt="">
             </div>
@@ -960,15 +960,15 @@
                 </div>
             </div>
 
-        </section>
+        </section>-->
         <!-- end slider section -->
-    </div>
+    <!--</div>-->
 
 
 
     <!-- about section -->
 
-    <section class="about_section">
+    <!--<section class="about_section">
         <div class="container  ">
             <div class="row">
                 <div class="col-md-6 ">
@@ -993,12 +993,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- end about section -->
     <!-- treatment section -->
 
-    <section class="treatment_section layout1_padding">
+    <!--<section class="treatment_section layout1_padding">
         <div class="side_img">
             <img src="images/treatment-side-img.jpg" alt="">
         </div>
@@ -1083,12 +1083,12 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- end treatment section -->
     <!-- team section -->
 
-    <section class="team_section layout1_padding">
+    <!--<section class="team_section layout1_padding">
         <div class="container">
             <div class="heading_container heading_center">
                 <h2>
@@ -1183,22 +1183,22 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                     <!--test-->
-                    <div>
+                    <!--<div>
                         <a href="newDr.html">Add New Doctor</a>
-                    </div>
+                    </div>-->
 
 
                     <!--end test-->
-                </div>
+                <!--</div>
             </div>
         </div>
-    </section>
+    </section>-->
 
     <!-- end team section -->
     <!-- info section -->
-    <section  class="team_section layout1_padding">
+    <!--<section  class="team_section layout1_padding">
         <div class="container">
             <div class="info_top">
                 <div class="info_logo">
@@ -1274,9 +1274,7 @@
                                 <a href="doctor.html">
                                     Doctors
                                 </a>
-                                <a href="testimonial.html">
-                                    Testimonial
-                                </a>
+
                                 <a href="contact.html">
                                     Contact us
                                 </a>
@@ -1336,32 +1334,32 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- end info_section -->
     <!-- footer section -->
-    <footer class="footer_section">
+    <!--<footer class="footer_section">
         <div class="container">
             <p>
                 &copy; <span id="displayYear"></span> All Rights Reserved By
                 <a href="https://html.design/">Free Html Templates</a>
             </p>
         </div>
-    </footer>
+    </footer>-->
     <!-- footer section -->
     <!-- jQery -->
-    <script src="js/jquery-3.4.1.min.js"></script>
+    <!--<script src="js/jquery-3.4.1.min.js"></script>-->
     <!-- bootstrap js -->
-    <script src="js/bootstrap.js"></script>
+    <!--<script src="js/bootstrap.js"></script>-->
     <!-- nice select -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>-->
     <!-- owl slider -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>-->
     <!-- datepicker -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>-->
     <!-- custom js -->
-    <script src="js/custom.js"></script>
+    <!--<script src="js/custom.js"></script>
 
 
 </body>
 
-</html>
+</html>-->
