--- a/HospitalSystem/wwwroot/login.html
+++ b/HospitalSystem/wwwroot/login.html
@@ -1,9 +1,6 @@
-<html lang="en">
-<!--<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
-</head>-->
+
+<!DOCTYPE html>
+<html>
 <head>
     <!-- Basic -->
     <meta charset="utf-8" />
@@ -16,77 +13,6 @@
     <meta name="author" content="" />
 
     <title>Mico</title>
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f2f2f2;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            text-align: center;
-            margin-bottom: 30px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-            .form-group label {
-                display: block;
-                font-weight: bold;
-                margin-bottom: 5px;
-            }
-
-            .form-group input[type="text"],
-            .form-group input[type="password"] {
-                width: 100%;
-                padding: 10px;
-                border: 1px solid #ccc;
-                border-radius: 3px;
-            }
-
-            .form-group button {
-                display: block;
-                width: 100%;
-                padding: 10px;
-                border: none;
-                background-color: #4caf50;
-                color: #fff;
-                font-size: 16px;
-                font-weight: bold;
-                border-radius: 3px;
-                cursor: pointer;
-            }
-
-                .form-group button:hover {
-                    background-color: #45a049;
-                }
-
-            .form-group .form-check {
-                margin-top: 10px;
-            }
-
-                .form-group .form-check label {
-                    font-weight: normal;
-                }
-
-        .error-message {
-            color: #ff0000;
-            margin-top: 10px;
-        }
-    </style>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -111,61 +37,120 @@
 </head>
 
 <body>
-
-    <section class="login_section layout-padding-bottom">
-        <div class="container">
-            <div class="heading-container">
-                <h2>Login</h2>
+    <!-- header section strats -->
+    <header class="header_section">
+        <div class="header_top">
+            <div class="container">
+                <div class="contact_nav">
+                    <a href="">
+                        <i class="fa fa-phone" aria-hidden="true"></i>
+                        <span>
+                            Call : +01 123455678990
+                        </span>
+                    </a>
+                    <a href="">
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <span>
+                            Email : demo@gmail.com
+                        </span>
+                    </a>
+                    <a href="">
+                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                        <span>
+                            Location
+                        </span>
+                    </a>
+                </div>
             </div>
+        </div>
+        <div class="header_bottom">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg custom_nav-container ">
+                    <a class="navbar-brand" href="PatientIndex.html">
+                        <img src="images/logo.png" alt="">
+                    </a>
+
+
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class=""> </span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
+                            <ul class="navbar-nav  ">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html"> About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="treatment.html">Treatment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="doctor.html">Doctors</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="book.html">Appoitment</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                        <div class="quote_btn-container">
+                            <a href="login.html">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                                <span>
+                                    Login
+                                </span>
+                            </a>
+                            <a href="signup.html">
+                                <i class="fa fa-user" aria-hidden="true"></i>
+                                <span>
+                                    Sign Up
+                                </span>
+                            </a>
+                            <form class="form-inline">
+                                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
+                                    <i class="fa fa-search" aria-hidden="true"></i>
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <section class="signup_section layout-padding-bottom">
+        <div class="container">
+
             <div class="row">
                 <div class="col-md-7">
                     <div class="form-container">
-                        <form  action="index.html" method="get" >
+                        <form id="login" action="PatientIndex.html" method="get">
+
+                    
                             <div>
-                                <input type="text" id="username" placeholder="your username"/>
+                                <label for="user">Username:</label>
+                                <input type="text" id="username" placeholder="your username" />
                             </div>
                             <div>
-                                <input type="password" id="password" placeholder="your password"/>
+                                <label for="user">Password:</label>
+                                <input type="password" id="password" placeholder="your password" />
                             </div>
-                            <div>
-                                <input type="submit" value="login">
-                            </div>
+                                <div>
+                                    <input type="submit" value="login">
+                                </div>
+                            
                         </form>
                     </div>
-
                 </div>
-                <div class="col-md-5">
+                <!--<div class="col-md-5">
                     <div class="img-box">
                         <img src="images/signup.jpg" alt="">
                     </div>
-                </div>
+                </div>-->
             </div>
-
         </div>
     </section>
-
-    <!-- footer section -->
-    <footer class="footer_section">
-        <div class="container">
-            <p>
-                &copy; <span id="displayYear"></span> All Rights Reserved By
-                <a href="https://html.design/">Free Html Templates</a>
-            </p>
-        </div>
-    </footer>
-    <!-- footer section -->
-    <!-- jQery -->
-    <script src="js/jquery-3.4.1.min.js"></script>
-    <!-- bootstrap js -->
-    <script src="js/bootstrap.js"></script>
-    <!-- nice select -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js" integrity="sha256-Zr3vByTlMGQhvMfgkQ5BtWRSKBGa2QlspKYJnkjZTmo=" crossorigin="anonymous"></script>
-    <!-- owl slider -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <!-- datepicker -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/js/bootstrap-datepicker.js"></script>
-    <!-- custom js -->
-    <script src="js/custom.js"></script>
-
 </body>
 </html>
