--- a/HospitalSystem/wwwroot/ManagerLogin.html
+++ b/HospitalSystem/wwwroot/ManagerLogin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <!-- Basic -->
@@ -13,7 +13,7 @@
 
     <title>Mico</title>
 
-    
+
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
@@ -35,9 +35,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
 </head>
-
 <body>
-    <!-- header section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container">
@@ -66,7 +64,7 @@
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
-                    <a class="navbar-brand" href="PatientIndex.html">
+                    <a class="navbar-brand" href="index.html">
                         <img src="images/logo.png" alt="">
                     </a>
 
@@ -81,40 +79,16 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
-                                <!--<li class="nav-item">
-                                <a class="nav-link" href="about.html"> About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="treatment.html">Treatment</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="doctor.html">Doctors</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="book.html">Appoitment</a>
-                            </li>-->
 
+                                <!-- <li class="nav-item">
+                                    <a class="nav-link" href="book.html">Appoitment</a>
+                                </li>-->
+                                <!--<li class="nav-item">
+                                    <a class="nav-link" href="AddPatientRep.html">Patient Report</a>
+                                </li>-->
                             </ul>
                         </div>
-                        <div class="quote_btn-container">
-                            <a href="login.html">
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                                <span>
-                                    Login
-                                </span>
-                            </a>
-                            <a href="signup.html">
-                                <i class="fa fa-user" aria-hidden="true"></i>
-                                <span>
-                                    Sign Up
-                                </span>
-                            </a>
-                            <form class="form-inline">
-                                <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                                    <i class="fa fa-search" aria-hidden="true"></i>
-                                </button>
-                            </form>
-                        </div>
+
                     </div>
                 </nav>
             </div>
@@ -122,45 +96,25 @@
     </header>
     <section class="signup_section layout-padding-bottom">
         <div class="container">
-           
+
             <div class="row">
                 <div class="col-md-7">
                     <div class="form-container">
-                        <form id="SignUp" action="PatientIndex.html" onsubmit="signup()">
+                        <form id="login" action="ManIndex.html" method="get">
+
 
                             <div>
-                                <label for="user">Username:</label>
-                                <input type="text" id="name" placeholder="Full Name" />
-                            </div>
-                            <div>
                                 <label for="user">Email:</label>
-                                <input type="email" id="email" placeholder="Email" />
-                            </div>
-                            <div>
-                                <label for="user">Phone Number:</label>
-                                <input type="text" id="phoneNum" placeholder="Phone Number" />
+                                <input type="text" id="email" placeholder="your email" />
                             </div>
                             <div>
                                 <label for="user">Password:</label>
-                                <input type="password" id="password" placeholder="Password" />
+                                <input type="password" id="password" placeholder="your password" />
                             </div>
                             <div>
-                                <label for="user">Confirm Password:</label>
-                                <input type="password" id="comfirmPass" placeholder="Confirm Password" />
-                            </div>
-                            <div>
-
-                                <label for="user">Genger:</label>
-                                <select name="gender" id="gender">
-                                    <option disabled selected>Select your gender</option>
-                                    <option value="female">Female</option>
-                                    <option value="male">Male</option>
-                                </select>
+                                <input type="submit" value="login">
                             </div>
 
-                            <div class="btn-box">
-                                <button type="submit">Submit</button>
-                            </div>
                         </form>
                     </div>
                 </div>
@@ -172,6 +126,6 @@
             </div>
         </div>
     </section>
-    <script src="js/signup.js"></script>
+
 </body>
 </html>
