--- a/HospitalSystem/wwwroot/login.html
+++ b/HospitalSystem/wwwroot/login.html
@@ -81,7 +81,7 @@
                                 <li class="nav-item active">
                                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
-                                <li class="nav-item">
+                                <!--<li class="nav-item">
                                     <a class="nav-link" href="about.html"> About</a>
                                 </li>
                                 <li class="nav-item">
@@ -92,7 +92,7 @@
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="book.html">Appoitment</a>
-                                </li>
+                                </li>-->
 
                             </ul>
                         </div>
@@ -130,8 +130,8 @@
 
                     
                             <div>
-                                <label for="user">Username:</label>
-                                <input type="text" id="username" placeholder="your username" />
+                                <label for="user">Email:</label>
+                                <input type="text" id="email" placeholder="your email" />
                             </div>
                             <div>
                                 <label for="user">Password:</label>
