--- a/HospitalSystem/wwwroot/DrAppoitment.html
+++ b/HospitalSystem/wwwroot/DrAppoitment.html
@@ -1,8 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <!-- Basic -->
     <meta charset="utf-8" />
-    <title>Add New Doctor</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Mobile Metas -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <!-- Site Metas -->
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+
+    <title>Mico</title>
 
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -54,7 +63,7 @@
         <div class="header_bottom">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg custom_nav-container ">
-                    <a class="navbar-brand" href="index.html">
+                    <a class="navbar-brand" href="PatientIndex.html">
                         <img src="images/logo.png" alt="">
                     </a>
 
@@ -67,56 +76,18 @@
                         <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                             <ul class="navbar-nav  ">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="ManIndex.html">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="DrIndex.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
+
 
                             </ul>
                         </div>
-
+                       
                     </div>
                 </nav>
             </div>
         </div>
     </header>
-    <section class="newDr_section layout-padding-bottom">
-        <div class="container">
-            <div class="heading-container">
-                <h2>Add New Doctor</h2>
-            </div>
-            <div class="row">
-                <!--<div class="col-md-7">
-                    <form action="upload.php" method="post" enctype="multipart/form-data">
-                        <input type="file" name="image" accept="image/*">
-                        <input type="submit" value="Upload">
-                        <p>
-                            This is a paragraph with a <a href="https://example.com">link</a> in it.
-                        </p>
-                    </form>
-                </div>-->
-                <div class="col-md-7">
-                    <div class="form-container">
-                        <form action="doctor.html" method="get">
-                            <div>
-                                <input type="text" id="HospitalID" placeholder="Hospital ID" />
-                            </div>
-                            <div>
-                                <input type="text" id="username" placeholder="your username" />
-                            </div>
-                            <div>
-                                <input type="password" id="password" placeholder="your password" />
-                            </div>
-                            <div class="col-md-7">
-                                <input type="file" name="image" accept="image/*">
-                            </div>
-                            <div>
-                                <input type="submit" value="login">
-                            </div>
-                        </form>
-                    </div>
 
-                </div>
-            </div>
-        </div>
-    </section>
 </body>
 </html>
