--- a/HospitalSystem/wwwroot/PatientReport.html
+++ b/HospitalSystem/wwwroot/PatientReport.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <!-- Basic -->
@@ -13,7 +13,7 @@
 
     <title>Mico</title>
 
-    
+
     <!-- bootstrap core css -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
@@ -35,9 +35,7 @@
     <link href="css/responsive.css" rel="stylesheet" />
 
 </head>
-
 <body>
-    <!-- header section strats -->
     <header class="header_section">
         <div class="header_top">
             <div class="container">
@@ -79,24 +77,27 @@
                         <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                             <ul class="navbar-nav  ">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="PatientIndex.html">Home <span class="sr-only">(current)</span></a>
                                 </li>
-                                <!--<li class="nav-item">
-                                <a class="nav-link" href="about.html"> About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="treatment.html">Treatment</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="doctor.html">Doctors</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="book.html">Appoitment</a>
-                            </li>-->
+                                <li class="nav-item">
+                                    <a class="nav-link" href="about.html"> About </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="treatment.html">Treatment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="doctor.html">Doctors</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="book.html">Appoitment</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="PatientReport.html">Patient Report</a>
+                                </li>
 
                             </ul>
                         </div>
-                        <div class="quote_btn-container">
+                        <!--<div class="quote_btn-container">
                             <a href="login.html">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span>
@@ -114,64 +115,11 @@
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </button>
                             </form>
-                        </div>
+                        </div>-->
                     </div>
                 </nav>
             </div>
         </div>
     </header>
-    <section class="signup_section layout-padding-bottom">
-        <div class="container">
-           
-            <div class="row">
-                <div class="col-md-7">
-                    <div class="form-container">
-                        <form id="SignUp" action="PatientIndex.html" onsubmit="signup()">
-
-                            <div>
-                                <label for="user">Username:</label>
-                                <input type="text" id="name" placeholder="Full Name" />
-                            </div>
-                            <div>
-                                <label for="user">Email:</label>
-                                <input type="email" id="email" placeholder="Email" />
-                            </div>
-                            <div>
-                                <label for="user">Phone Number:</label>
-                                <input type="text" id="phoneNum" placeholder="Phone Number" />
-                            </div>
-                            <div>
-                                <label for="user">Password:</label>
-                                <input type="password" id="password" placeholder="Password" />
-                            </div>
-                            <div>
-                                <label for="user">Confirm Password:</label>
-                                <input type="password" id="comfirmPass" placeholder="Confirm Password" />
-                            </div>
-                            <div>
-
-                                <label for="user">Genger:</label>
-                                <select name="gender" id="gender">
-                                    <option disabled selected>Select your gender</option>
-                                    <option value="female">Female</option>
-                                    <option value="male">Male</option>
-                                </select>
-                            </div>
-
-                            <div class="btn-box">
-                                <button type="submit">Submit</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-                <!--<div class="col-md-5">
-                    <div class="img-box">
-                        <img src="images/signup.jpg" alt="">
-                    </div>
-                </div>-->
-            </div>
-        </div>
-    </section>
-    <script src="js/signup.js"></script>
 </body>
 </html>
