--- a/HospitalSystem/wwwroot/about.html
+++ b/HospitalSystem/wwwroot/about.html
@@ -96,28 +96,12 @@
                   <li class="nav-item">
                     <a class="nav-link" href="book.html">Appoitment</a>
                   </li>
-                  
+                  <li class="nav-item">
+                      <a class="nav-link" href="PatientReport.html">Patient Report</a>
+                  </li>
                 </ul>
               </div>
-              <div class="quote_btn-container">
-                <a href="login.html">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Login
-                  </span>
-                </a>
-                <a href="signup.html">
-                  <i class="fa fa-user" aria-hidden="true"></i>
-                  <span>
-                    Sign Up
-                  </span>
-                </a>
-                <form class="form-inline">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                  </button>
-                </form>
-              </div>
+             
             </div>
           </nav>
         </div>
