--- a/HospitalSystem/wwwroot/book.html
+++ b/HospitalSystem/wwwroot/book.html
@@ -93,10 +93,13 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="book.html">Appoitment</a>
                                 </li>
-                                
+                                <li class="nav-item">
+                                    <a class="nav-link" href="PatientReport.html">Patient Report</a>
+                                </li>
+
                             </ul>
                         </div>
-                        <div class="quote_btn-container">
+                        <!--<div class="quote_btn-container">
                             <a href="login.html">
                                 <i class="fa fa-user" aria-hidden="true"></i>
                                 <span>
@@ -114,7 +117,7 @@
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </button>
                             </form>
-                        </div>
+                        </div>-->
                     </div>
                 </nav>
             </div>
