--- a/HospitalSystem/wwwroot/ManagerLogin.html
+++ b/HospitalSystem/wwwroot/ManagerLogin.html
@@ -94,7 +94,7 @@
             </div>
         </div>
     </header>
-    <section class="signup_section layout-padding-bottom">
+    <section class="login_section layout-padding-bottom">
         <div class="container">
 
             <div class="row">
